Fix contrast issue in footer

--- a/booking/static/booking/css/styles.css
+++ b/booking/static/booking/css/styles.css
@@ -204,15 +204,25 @@ ul.errorlist.nonfield {
   list-style: none; /* remove bullets */
   margin-bottom: 1rem;
 }
-
 #footer {
-  background-color: rgba(200, 200, 200, 1);
-  color: #000000;
+  background: rgba(200, 200, 200, 1);
+  color: #000;
 }
 
-#footer h5 {
+#footer h5,
+#footer a {
+  color: #000;
+  text-decoration: none;
   margin-bottom: 0;
   line-height: 1;
+}
+
+#footer a:hover,
+#footer a:focus {
+  color: #333;
+  text-decoration: underline;
+}
+;
 }
 
 /* Adjust spacing in collapsed navbar for login and register buttons */
